# rusteze

./: Cargo.toml  README.md
.github/workflows/: docs.yml  release.yml
core/cargo-rusteze/: Cargo.toml  README.md
core/cargo-rusteze-deploy/: Cargo.toml  README.md
core/cargo-rusteze-deploy/src/: main.rs
core/cargo-rusteze-metadata/: Cargo.toml
core/cargo-rusteze-metadata/src/: lib.rs
core/cargo-rusteze-run/: Cargo.toml  README.md
core/cargo-rusteze-run/src/: main.rs
core/cargo-rusteze/src/: commands.rs  deploy.rs  lib.rs  main.rs  serve.rs
core/cargo-rusteze/src/aws/: builder.rs  lambda.rs  mod.rs
core/cargo-rusteze/src/aws/gateway/: build.rs
core/cargo-rusteze/src/aws/lambda/: build.rs
core/codegen/: Cargo.toml  README.md
core/codegen/src/: api.rs  config.rs  db.rs  lib.rs
core/common/: Cargo.toml
core/common/src/: lib.rs
core/config/: Cargo.toml
core/config/src/: lib.rs
core/lib/: Cargo.toml  README.md
core/lib/src/: aws_mock.rs  cloud.rs  config.rs  deployment.rs  error.rs  lib.rs  local_server.rs  logging.rs  messaging.rs  models.rs  policy.rs  retry.rs
core/lib/src/cloud/: tests.rs
core/lib/src/models/: tests.rs
core/lib/src/pubsub/: service.rs
docs/: astro.config.mjs  pnpm-lock.yaml
docs/src/content/docs/: get-started.md  index.mdx
docs/src/content/docs/reference/: auth.md  deploy-command-summary.md  deployment.md  graph.md
examples/auth/: .gitignore  Cargo.toml  rusteze.toml
examples/auth/src/: lib.rs
examples/hello-world/: .gitignore  Cargo.toml  README.md  rusteze.deploy.toml  rusteze.enhanced.toml  rusteze.functions.json  rusteze.functions.rs  rusteze.toml  rusteze_local_functions.rs
examples/hello-world/src/: lib.rs  main.rs  rusteze_main.rs
examples/topic/: rusteze.toml
examples/topic/src/: lib.rs
