[package]
name = "rusteze-cargo"
version = "0.1.0"
edition = "2024"
description = "Rusteze cargo commands."
license = "MPL-2.0"

[[bin]]
name = "cargo-rusteze"
path = "src/main.rs"

[dependencies]
toml = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

aws-config =  {version = "1.0", optional = true }
aws-sdk-lambda = {version = "1.2", optional = true }
aws-sdk-apigatewayv2 = {version = "1.65.0", optional = true }
aws-sdk-sts = {version = "1.0", optional = true }
aws-sdk-iam = {version = "1.0", optional = true }
rusteze = { path = "../lib" }
rusteze_config = {path = "../config"}
openssl = { version = "0.10.35", features = ["vendored"] }
tracing = "0.1.41"

[features]
default = ["aws"]
aws = ["dep:aws-config", "dep:aws-sdk-lambda", "dep:aws-sdk-apigatewayv2", "dep:aws-sdk-sts", "dep:aws-sdk-iam"]
