[package]
name = "rusteze_codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
lazy_static = "1.4"
devise = "0.4.2"

aws-config = { version = "1.0", optional = true }
aws-sdk-lambda = { version = "1.2", optional = true }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.219", features = ["derive"]}
inventory = "0.3.20"
rusteze_config = { path = "../config"}

[lib]
proc-macro = true
