[package]
name = "rusteze_codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
lazy_static = "1.4"
devise = "0.4.2"
toml = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"

aws-config = { version = "1.0", optional = true }
aws-sdk-lambda = { version = "1.2", optional = true }
tokio = { version = "1", features = ["full"] }

[lib]
proc-macro = true
