[package]
name = "rusteze"
version = "0.1.0"
edition = "2024"

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
lazy_static = "1.4"
devise = "0.4.2"
serde = "1.0.219"
lambda_runtime = {version = "0.13.0", optional = true }
aws_lambda_events = { version="0.8", optional = true }
tokio = { version = "1", features = ["full"] }
serde_json = "1"

[dependencies.rusteze_codegen]
version = "0.1.0"
path = "../codegen"

[features]
default = ["aws"]
aws = ["dep:lambda_runtime", "dep:aws_lambda_events"]
