[package]
name = "rusteze"
version = "0.1.0"
edition = "2024"
description = "Write once, deploy anywhere. Build and deploy cloud native applications with ease."
license = "MPL-2.0"

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
lazy_static = "1.4"
devise = "0.4.2"
serde = {version = "1.0.219", features = ["derive"] }
lambda_runtime = {version = "0.13.0", optional = true }
aws_lambda_events = { version="0.8", optional = true }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
inventory = "0.3.20"
axum = { version = "0.8.4", features = ["macros", "http1", "http2", "tokio"] }
anyhow = "1.0.98"
notify = "8.2.0"
toml = "0.8.20"
rusteze_config = {path = "../config"}
aws-config = "1.8.5"
aws-sdk-sns = "1.82.0"
async-trait = "0.1.89"
reqwest = {version = "0.12.23", features = ["native-tls-vendored"]}

[dependencies.rusteze_codegen]
version = "0.1.0"
path = "../codegen"

[features]
default = ["aws"]
aws = ["dep:lambda_runtime", "dep:aws_lambda_events"]
